spade-tests/src/snapshots/spade_tests__ast_lowering__unused_attribute_errors_on_builtin_entity.snap
---
source: spade-tests/src/ast_lowering.rs
---
#[uwu]
extern entity a() -> bool;


error: Unknown attribute 'uwu'
  ┌─ testinput:1:3
  │
1 │ #[uwu]
  │   ^^^ Unrecognised attribute


