spade-tests/src/snapshots/spade_tests__ast_lowering__unused_attribute_on_self_is_an_error.snap
---
source: spade-tests/src/ast_lowering.rs
---
struct Foo {}
impl Foo {
    fn test(#[fsm] self) -> bool {true}
}

error: fsm is not a valid attribute for `self` parameter
  ┌─ testinput:3:13
  │
3 │     fn test(#[fsm] self) -> bool {true}
  │             ^^^^^^ Unsupported attribute for `self` parameter
