spade-tests/src/snapshots/spade_tests__ast_lowering__user_defined_macros_are_not_supported_yet.snap
---
source: spade-tests/src/ast_lowering.rs
---
macro mac_n_cheese() {}

fn test() {
    mac_n_cheese!();
}


error: User-defined macros are not supported yet
  ┌─ testinput:4:5
  │
4 │     mac_n_cheese!();
  │     ^^^^^^^^^^^^^
  │
  = note: Only built-in macros are supported at the moment
