spade-tests/src/snapshots/spade_tests__ast_lowering__visibility_markers_work.snap
---
source: spade-tests/src/ast_lowering.rs
---
mod a {
    pub struct Cat {}
    pub(self) enum Dog {}
    pub(super) trait Happy {}
    pub(lib) use Cat as Pet;
}

mod b {
    use super::a::Cat as C;
    use super::a::Dog as D; // this will fail
    use super::a::Happy as H;
    use super::a::Pet as P;
}


error: Dog is inaccessible
   ┌─ testinput:10:19
   │
 3 │     pub(self) enum Dog {}
   │               ----------- The inaccessible item is defined here
   ·
10 │     use super::a::Dog as D; // this will fail
   │                   ^^^ Dog is inaccessible
   │
   = note: consider using `pub` to alter its visibility
