spade-tests/src/snapshots/spade_tests__ast_lowering__wires_of_ports_are_disallowed.snap
---
source: spade-tests/src/ast_lowering.rs
---
struct port A {}


extern entity x(a: &A) -> bool;


error: Cannot create a wire of ports
  ┌─ testinput:4:20
  │
4 │ extern entity x(a: &A) -> bool;
  │                    ^^
  │                    ││
  │                    │Because this is a port
  │                    This cannot be a wire
